[tool.poetry]
name = "redis-semaphore-eval"
version = "0.3.0"
description = "A redis semaphore implementation using eval scripts"
authors = ["Cameron HUrst <cameron.a.hurst@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/wakemaster39/redis-semaphore-eval"
repository = "https://github.com/wakemaster39/redis-semaphore-eval"
keywords = ["redis", "semaphore", "lock"]
packages = [
    { include = "redis_semaphore_eval", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.6.1"
redis = "^3.5.3"

[tool.poetry.dev-dependencies]
pytest = "^6.0"
pytest-cov = "^2.8"
flake8 = "^3.8"
flake8-bugbear = "^20.1"
flake8-comprehensions = "^3.2.3"
flake8-isort = "^4.0.0"
flake8-eradicate = "^0.4.0"
flake8-pytest-style = "^1.3.0"
flake8-use-fstring = "^1.1"
flake8-mutable = "^1.2.0"
isort = "^5.3"
pre-commit = "^2.7"
mypy = "^0.782.0"
black = { version = "^20.8b1", allow-prereleases = true}
coverage = {version = "^5.0b1", allow-prereleases = true}

[tool.isort]
profile="black"
src_paths="src"
line_length=120


[tool.black]
line-length = 120
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.idea
  | \.vscode
  | \.venv
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
